[package]
name = "jinx-proxy"
version = "0.1.3"
authors = ["Jared De La Cruz <jared@jareddlc.com>"]
description = "Proxy and deploy docker containers"
repository = "https://github.com/jareddlc/jinx"
readme = "README.md"
license = "MIT"
edition = "2018"

[dependencies]
bollard = "0.11"
handlebars = "4.0"
dirs = "3.0"
futures-util = "0.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tar = "0.4"
